# inno_ros_intro_r2d2_slam

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
launch/: diffdrive.launch  diffdrive_melodic.launch  diffdrive_noetic.launch  display_robot.launch  gazebo.launch  gripper.launch  head.launch  joints_control.launch  mapping_geotiff.launch  mapping_geotiff_noetic.launch  move_base.launch  robot_distance_launch
models/Maze_ql_1/: model.config  model.sdf
rviz/: robot.rviz
src/: simple_control.cpp  test_node.cpp
urdf/: lidar.xacro  robot.urdf
world/: maze.world
